[gd_scene load_steps=4 format=3 uid="uid://eoyb2holpctm"]

[ext_resource type="Script" uid="uid://stiouby4kcwy" path="res://System/typer/TyperwriterEnemy.gd" id="1_6tgua"]
[ext_resource type="Texture2D" uid="uid://dik0h2rqsfnk2" path="res://Sprites/typer/rightwide.png" id="3_4e6ay"]
[ext_resource type="PackedScene" uid="uid://bde5ka1m7besv" path="res://System/typer/TypewriterBase.tscn" id="3_wso16"]

[node name="EnemyDialog" type="Node2D"]
script = ExtResource("1_6tgua")
metadata/_edit_horizontal_guides_ = [0.0]

[node name="Rightwide" type="Sprite2D" parent="."]
texture = ExtResource("3_4e6ay")

[node name="Typer" parent="." instance=ExtResource("3_wso16")]
offset_left = -81.0
offset_top = -42.0
offset_right = 116.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true

[connection signal="typing_end" from="Typer" to="." method="_on_typer_typing_end"]
[connection signal="typing_start" from="Typer" to="." method="_on_typer_typing_start"]
